# slotifyme

admin-ui/: .eslintrc.json  Dockerfile  README.md  package-lock.json  package.json
admin-ui-home/: index.html
admin-ui-home/src/: App.tsx
admin-ui-home/src/components/: ForgotPasswordForm.tsx  HomePage.tsx  LoginForm.tsx  LoginPage.tsx  SecurityQuestionsForm.tsx
admin-ui-login/src/: App.tsx
admin-ui-login/src/components/: ForgotPasswordForm.tsx  LoginForm.tsx  LoginPage.tsx  SecurityQuestionsForm.tsx
admin-ui/src/app/: globals.css  layout.tsx
admin-ui/src/app/admin/: layout.tsx  page.tsx
admin-ui/src/app/admin/home/: page.tsx
admin-ui/src/app/admin/plans/: page.tsx
admin-ui/src/app/admin/tenants/: page.tsx
admin-ui/src/app/api/[[...route]]/: route.ts
admin-ui/src/app/api/admin/addons/: route.ts
admin-ui/src/app/api/admin/plans/: route.ts
admin-ui/src/app/api/admin/tenants/: route.ts
admin-ui/src/app/api/auth/login/: route.ts
admin-ui/src/app/login/: page.tsx
admin-ui/src/app/logout/: route.ts
admin-ui/src/components/: AddonTable.tsx  BootstrapButton.tsx  DebugHelper.tsx  Navbar.tsx  NewTenantDrawer.tsx  PlanTable.tsx  QueryProvider.tsx  Sidebar.tsx  TenantTable.tsx  Toast.tsx
admin-ui/src/lib/: auth.ts  env.ts  fetcher.ts  ui.tsx  utils.ts  zod-schemas.ts
router/: DEPLOYMENT.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  env.example  pyproject.toml
router/alembic/: env.py
router/app/: cache.py  config.py  db.py  deps.py  logging.py  main.py
router/app/models/: slug_history.py  slug_map.py
router/app/routers/: admin_slugs.py  health.py  publish.py  resolve.py
router/app/schemas/: publish.py  resolve.py  slug.py
router/app/services/: idempotency.py  manifest_service.py  slug_service.py  tenant_client.py
router/infra/aws/router-ecs/: main.tf  terraform.tfvars.example  variables.tf
router/scripts/: dev-setup.sh
router/tests/: conftest.py  test_admin_slugs.py  test_publish.py  test_resolve.py
rules/: .coverage  DEPLOYMENT.md  Dockerfile  README.md  alembic.ini  deploy.sh  docker-compose.yml  migrate_db.sh  pyproject.toml  test.db
rules/alembic/: env.py
rules/alembic/versions/: 001_update_plan_model_new_domain_fields.py  002_add_pricing_refs_and_effect_json.py
rules/app/: __init__.py  cache.py  config.py  db.py  deps.py  events.py  main.py
rules/app/clients/: pricing_client.py
rules/app/models/: __init__.py  addon.py  limit_override.py  overage_price_refs.py  plan.py  tenant_addon.py  tenant_plan.py
rules/app/routers/: __init__.py  admin_addons.py  admin_plans.py  entitlements.py  health.py  overage_pricing.py  price_preview.py  tenant_addons.py  tenant_overrides.py  tenant_plan.py
rules/app/schemas/: __init__.py  addon.py  entitlements.py  overage_pricing.py  plan.py  price_preview.py  tenant.py
rules/app/services/: __init__.py  addon_service.py  cache_service.py  entitlement_service.py  plan_service.py
rules/app/utils/: __init__.py  auth.py  versioning.py
rules/infra/aws/rules-ecs/: alb.tf  ecr.tf  ecs.tf  iam.tf  logs.tf  outputs.tf  security.tf  service_discovery.tf  terraform.tfvars  variables.tf
rules/scripts/: seed_plans.py
rules/tests/: __init__.py  conftest.py  test_admin_addons.py  test_admin_plans.py  test_entitlements.py  test_new_entitlements.py  test_tenant_assignments.py
tenant/: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
tenant/alembic/: env.py
tenant/scripts/: init_db.py
tenant/tenant/app/: __init__.py  config.py  db.py  deps.py  logging.py  main.py
tenant/tenant/app/models/: __init__.py  data_classification.py  location.py  tenant.py  tenant_user.py
tenant/tenant/app/routers/: __init__.py  health.py  links.py  locations.py  public.py  stats.py  tenants.py
tenant/tenant/app/schemas/: __init__.py  common.py  link.py  location.py  tenant.py
tenant/tenant/app/services/: __init__.py  events.py  link_service.py  location_service.py  rules_client.py  tenant_service.py
tenant/tenant/app/utils/: __init__.py  idempotency.py  pagination.py  slug.py
tenant/tests/: __init__.py  conftest.py  test_tenants.py
